--- a/VidlyCoreApp/Views/Shared/_Layout.cshtml
+++ b/VidlyCoreApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Vidly</a>
                 <a asp-area="" asp-controller="Movies" asp-action="Index" class="navbar-brand">Movies</a>
                 <a asp-area="" asp-controller="Customers" asp-action="Index" class="navbar-brand">Customers</a>
+                <a asp-area="" asp-controller="Inventory" asp-action="Index" class="navbar-brand">Inventory</a>
+                <a asp-area="" asp-controller="Vendors" asp-action="Index" class="navbar-brand">Vendors</a>
             </div>
             <partial name="_LoginPartial" />
         </div>
